dev/POCO/TEST/NEG/NTOKPP.POC
/* this file contains no tokens, only comments & pp lines */
#pragma poco echo "expect>Program does not contain a main() routine"

#ifndef SILLY_STUFF
 #if defined(more_silly_stuff) || !defined(extremely_silly_stuff)
 #pragma this line should be ignored
 #else
 #pramga also this line
 #endif
#endif